Adds Custom Theme
(cherry picked from commit 5effa813716c2f119c010f2ba4f4a1244e879ed2)

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -91,6 +91,9 @@
     <!-- Monet theme only support S+ -->
     <style name="Theme.Tachiyomi.Monet" />
 
+    <!-- Custom Theme -->
+    <style name="Theme.Tachiyomi.Custom" />
+
     <!--== Green Apple Theme ==-->
     <style name="Theme.Tachiyomi.GreenApple">
         <!-- Theme Colors -->
